--- a/Food.html
+++ b/Food.html
@@ -7,11 +7,44 @@
 </head>
 
 <body>
-    <center>
-    <h1 style="font-size: 40px; font-family:'Times New Roman', Times, serif;"> Food Recipies</h1>
-
-    </center>
+    <nav>
+        <a href="https://pecuna1.github.io/My-Website/Home.html"><label class="logo">EasyPies</label></a>
+        <ul>
+        <li>Home</li>
+        <li>Recipies</li>
+        </ul>
+    </nav>
 </body>
+
+<style>
+    *{
+        padding: 0;
+        margin: 0;
+        text-decoration: none;
+        list-style: none;
+        box-sizing: border-box;
+    }
+    nav{
+        background: red;
+        height: 80px;
+        width: 100%;
+    }
+    body{
+        font-family: montserrat;
+    }
+    label.logo{
+        color: white;
+        font-size: 30px;
+        line-height: 80px;
+        padding: 0 100px;
+        font-weight: bold;
+    }
+    nav ul{
+        float: right;
+        margin-right: 20px;
+        line-height: 80px;
+    }
+</style>
 
 
 </html>
