--- a/Food.html
+++ b/Food.html
@@ -8,12 +8,20 @@
 
 <body>
     <nav>
-        <a href="https://pecuna1.github.io/My-Website/Home.html"><label class="logo">EasyPies</label></a>
-        <ul>
-        <li>Home</li>
-        <li>Recipies</li>
-        </ul>
-    </nav>
+    <a href="https://pecuna1.github.io/My-Website/Home.html"><label class="logo">EasyPiece</label></a>
+    <ul>
+    <li>Recipes</li>
+    <input class="Hover" placeholder="Search Recipes...">
+    </ul>
+    </nav><br>
+    <center>
+    <div style="width: 728px; height: 90px; background: #428bca; color: #fff; line-height: 90px; text-align: center; ">
+    Ad Placeholder
+    </div><br>
+    <image width="900" height="600" src="https://www.thespruceeats.com/thmb/By18WZI8G5Vs8To0y8BzEH4YBR8=/4705x3117/filters:fill(auto,1)/blueberry-ricotta-pancakes-541279742-5ab2d59d04d1cf0036f81d80.jpg"></image>
+    <h1 style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">How to make Pancakes</h1>
+    <p>idk search it up on google lol</p>
+    </center>
 </body>
 
 <style>
@@ -25,26 +33,44 @@
         box-sizing: border-box;
     }
     nav{
-        background: red;
+        background: rgb(141, 0, 0);
         height: 80px;
         width: 100%;
     }
+     nav ul{
+        float: right;
+        margin-right: 20px;
+        line-height: 80px;
+    }
+    nav ul li{
+        display: inline-block;
+        margin: 0 10px;
+        color: white;
+        font-size: 20px;
+    }
     body{
+        background-color: whitesmoke;
         font-family: montserrat;
     }
     label.logo{
         color: white;
         font-size: 30px;
         line-height: 80px;
-        padding: 0 100px;
+        padding: 0 50px;
         font-weight: bold;
     }
-    nav ul{
-        float: right;
-        margin-right: 20px;
-        line-height: 80px;
+    label.logo:hover{
+        font-size: 31px;
+        cursor: pointer;
     }
+    nav ul li:hover{
+        font-size: 21px;
+        cursor: pointer;
+    }
+
 </style>
 
+<script>
+</script>
 
 </html>
