--- a/Food.html
+++ b/Food.html
@@ -13,14 +13,22 @@
     <li>Recipes</li>
     <input class="Hover" placeholder="Search Recipes...">
     </ul>
-    </nav><br>
+    </nav>
     <center>
-    <div style="width: 728px; height: 90px; background: #428bca; color: #fff; line-height: 90px; text-align: center; ">
-    Ad Placeholder
-    </div><br>
-    <image width="900" height="600" src="https://www.thespruceeats.com/thmb/By18WZI8G5Vs8To0y8BzEH4YBR8=/4705x3117/filters:fill(auto,1)/blueberry-ricotta-pancakes-541279742-5ab2d59d04d1cf0036f81d80.jpg"></image>
-    <h1 style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">How to make Pancakes</h1>
-    <p>idk search it up on google lol</p>
+    <article>
+    <br>
+    <div style="width: 57%; height: 30%; background: #428bca; color: #fff; line-height: 90px; text-align: center; ">
+        Ad Placeholder
+        </div><br>
+    <h1 style="font-size: 70px; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; text-align: left; padding-left: 20px; ">Delicious Blueberry <br> Pancakes Recipe</h1><br>
+    <image style="padding-top: 10px" width="100%" height="60%" src="https://www.thespruceeats.com/thmb/By18WZI8G5Vs8To0y8BzEH4YBR8=/4705x3117/filters:fill(auto,1)/blueberry-ricotta-pancakes-541279742-5ab2d59d04d1cf0036f81d80.jpg"></image>    
+    <ul>
+    <li class="Top">Ingredients</li>
+    <li class="Top">Duration</li>
+    <li class="Top">Nutrition Info</li>
+    </ul>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </article>
     </center>
 </body>
 
@@ -31,6 +39,16 @@
         text-decoration: none;
         list-style: none;
         box-sizing: border-box;
+    }
+    article{
+        background-color: white;
+        width: 70%
+    }
+    .Top{
+        display: inline-block;
+        padding: 100px;
+        font-size: 30px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
     nav{
         background: rgb(141, 0, 0);
@@ -49,7 +67,7 @@
         font-size: 20px;
     }
     body{
-        background-color: whitesmoke;
+        background-color: lightgrey;
         font-family: montserrat;
     }
     label.logo{
