--- a/Home.html
+++ b/Home.html
@@ -18,7 +18,7 @@
     <article>
     <img class="logo1" height="80px" width="80px" src="./assets/logo.png">
     <h1 class="logo1" style="font-size: 60px; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">&nbsp;EasyPiece</h1>
-    <p style="text-align: center; font-size: 20px">Free, Easy, Affordable, and Delicious Recipes to make at Home!</p>
+    <br><p style="text-align: center; font-size: 20px">Free, Easy, Affordable, and Delicious Recipes to make at Home!</p>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </article>
 </body>
@@ -32,8 +32,9 @@
         box-sizing: border-box;
     }
     img.logo1{
-        float:left;
-        margin-left: 36%;
+        float: left;
+        margin-left: 35%;
+        
     }
     article{
         background-color: white;
