--- a/Home.html
+++ b/Home.html
@@ -8,15 +8,16 @@
 
 <body>
     <nav>
-    <img class="logo" height="50px" width="50px" style=" line-height: 10px;" src="./assets/logo.png">
+    <img class="logo" height="50px" width="50px" style=" line-height: 10px;" src="./assets/images/logo.png">
     <label class="logo">EasyPiece</label>
     <ul>
     <li>Recipes</li>
     <li>Store</li>
+    <li>About</li>
     </ul>
     </nav>
     <article>
-    <img class="logo1" height="80px" width="80px" src="./assets/logo.png">
+    <img class="logo1" height="80px" width="80px" src="./assets/images/logo.png">
     <h1 class="logo1" style="font-size: 60px; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">&nbsp;EasyPiece</h1>
     <br><p style="text-align: center; font-size: 20px">Free, Easy, Affordable, and Delicious Recipes to make at Home!</p>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -34,7 +35,7 @@
     img.logo1{
         float: left;
         margin-left: 35%;
-        
+        display: flex;
     }
     article{
         background-color: white;
@@ -54,8 +55,9 @@
         height: 80px;
         width: 100%;
         box-shadow: 0 5px 4px 0 rgba(0,0,0,.2);
+        display:flex; 
     }
-     nav ul{
+    nav ul{
         margin-right: 100px;
         line-height: 80px;
         color: white;
@@ -84,7 +86,6 @@
         font-size: 21px;
         cursor: pointer;
     }
-
 </style>
 
 <script>
