--- a/Home.html
+++ b/Home.html
@@ -1,30 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>
-    EasyPiece
-    </title>
+    <title>EasyPiece</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
     <nav>
-    <img class="logo" height="50px" width="50px" style=" line-height: 10px;" src="./assets/images/logo.png">
-    <label class="logo">EasyPiece</label>
-    <ul>
-    <li>Recipes</li>
-    <li>Store</li>
-    <li>About</li>
-    </ul>
-    </nav>
+        <a href="./Home.html"><img class="logo" height="50px" width="50px" style=" line-height: 10px;" src="./assets/images/logo.png"></a>
+        <a href="./Home.html"><label class="logo">EasyPiece</label></a>
+        <ul>
+        <li>Recipes</li>
+        <li>Store</li>
+        <li>About</li>
+        <p style="color:white; line-height: 80px; font-size: 25px; float: right;"> <script>document.write(new Date().toDateString());</script> </p>
+        </ul>
+        </nav>
     <article>
-    <img class="logo1" height="80px" width="80px" src="./assets/images/logo.png">
-    <h1 class="logo1" style="font-size: 60px; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">&nbsp;EasyPiece</h1>
-    <br><p style="text-align: center; font-size: 20px">Free, Easy, Affordable, and Delicious Recipes to make at Home!</p>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <img class="logo1" height="80px" width="80px" src="./assets/images/logo.png">
+        <h1 class="logo1" style="font-size: 60px; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">&nbsp;EasyPiece</h1>
+        <br><p style="text-align: center; font-size: 20px">Free, Easy, Affordable, and Delicious Recipes to make at Home!</p>
+        <br><br>
+        <hr>
+        <br><br>
+    <center>
+        <ul>
+        <a href="./subpages/test.html"><li class="Types">Breakfast</li></a>
+        <li class="Types">Lunch</li>
+        <li class="Types">Dinner</li>
+        <li class="Types">Deserts</li>
+        </ul>
+        <br><br>
+        <img src="https://www.thespruceeats.com/thmb/52ivqqWYcY1TmIVAHrK_JvxjhRQ=/4048x2696/filters:fill(auto,1)/basic-pancakes-3058758-hero-01-5c60cd6846e0fb00017dd2b5.jpg" width="80%" height="600px"><img>
+        <br><br><br><br>
+    <h1 style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size:50px;">Recipes</h1>
+    </center>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </article>
 </body>
 
 <style>
+    /* Body */
     *{
         padding: 0;
         margin: 0;
@@ -32,15 +48,11 @@
         list-style: none;
         box-sizing: border-box;
     }
-    img.logo1{
-        float: left;
-        margin-left: 35%;
-        display: flex;
-    }
+    
     article{
+        margin-left: auto;
+        margin-right: auto;
         background-color: white;
-        margin-left: 15%;
-        margin-right: 15%;
         padding-top: 100px;
         box-shadow: 0 10px 20px 0 rgba(0,0,0,.2);
         width: 70%;
@@ -49,13 +61,13 @@
         background-color: lightgrey;
         font-family: montserrat;
     }
+    /* Navbar */
     nav{
         position: fixed;
         background: rgb(141, 0, 0);
         height: 80px;
         width: 100%;
-        box-shadow: 0 5px 4px 0 rgba(0,0,0,.2);
-        display:flex; 
+        box-shadow: 0 5px 4px 0 rgba(0,0,0,.2); 
     }
     nav ul{
         margin-right: 100px;
@@ -76,6 +88,7 @@
         line-height: 80px;
         padding: 0 15px;
         font-weight: bold;
+        cursor: pointer;
     }
     img.logo{
         float: left;
@@ -85,6 +98,24 @@
     nav ul li:hover{
         font-size: 21px;
         cursor: pointer;
+    }
+    /* ETC */
+    .Types{
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 20px;
+        display:inline-block;
+        padding: 0 30px;
+        font-weight: bold;
+        color: black;
+    }
+    .Types:hover{
+        font-size: 21px;
+        cursor:pointer;
+    }
+    img.logo1{
+        float: left;
+        margin-left: 35%;
+        display: flex;
     }
 </style>
 
