--- a/Home.html
+++ b/Home.html
@@ -34,9 +34,17 @@
         <img src="https://www.thespruceeats.com/thmb/52ivqqWYcY1TmIVAHrK_JvxjhRQ=/4048x2696/filters:fill(auto,1)/basic-pancakes-3058758-hero-01-5c60cd6846e0fb00017dd2b5.jpg" width="80%" height="600px"><img>
         <br><br><br><br>
     <h1 style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size:50px;">Recipes</h1>
+    <input type="text" placeholder="Search..."></input>
     </center>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </article>
+    <footer>
+        <center>
+        <br>
+        <p>© Copyright 2022 Myech Co.</p>
+        <br>
+        </center>
+    </footer>
 </body>
 
 <style>
