--- a/Home.html
+++ b/Home.html
@@ -31,18 +31,21 @@
         <li class="Types">Deserts</li>
         </ul>
         <br><br>
-        <img src="https://www.thespruceeats.com/thmb/52ivqqWYcY1TmIVAHrK_JvxjhRQ=/4048x2696/filters:fill(auto,1)/basic-pancakes-3058758-hero-01-5c60cd6846e0fb00017dd2b5.jpg" width="80%" height="600px"><img>
+        <div class="slideshow">
+            <img style="height: 100px; width: 100px;" src="https://www.thespruceeats.com/thmb/52ivqqWYcY1TmIVAHrK_JvxjhRQ=/4048x2696/filters:fill(auto,1)/basic-pancakes-3058758-hero-01-5c60cd6846e0fb00017dd2b5.jpg">
+            <img style="height: 100px; width: 100px;" src="./assets/images/logo.png">
+        </div>
         <br><br><br><br>
-    <h1 style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size:50px;">Recipes</h1>
-    <input type="text" placeholder="Search..."></input>
+        <h1 style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size:50px;"><i>Search Recipes</i></h1>
+        <input class="search" type="text" placeholder="Type in a recipe you want to find here..."></input>
     </center>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </article>
     <footer>
         <center>
-        <br>
-        <p>© Copyright 2022 Myech Co.</p>
-        <br>
+            <br>
+            <p>© Copyright 2022 Myech Co.</p>
+            <br>
         </center>
     </footer>
 </body>
@@ -124,6 +127,16 @@
         float: left;
         margin-left: 35%;
         display: flex;
+    }
+    .search{
+        width: 1100px;
+        height: 40px;
+        border: none;
+        background-color: rgb(240, 240, 240);
+    }
+    .slideshow{
+        
+        max-width: 100px;;
     }
 </style>
 
