--- a/Home.html
+++ b/Home.html
@@ -173,7 +173,7 @@ img.logo1{
 }
     
     /*1SLIDE ANIMATION*/
-@-webkit-keyframes slide_animation{
+@keyframes slide_animation{
     0% {left:0px;}
     10% {left:0px;}
     20% {left:1200px;}
@@ -192,11 +192,11 @@ img.logo1{
     height: 800px;
     margin: 0 0 0 -2400px;
     position:relative;
-    -webkit-animation-name: slide_animation;
-    -webkit-animation-duration: 30s;
-    -webkit-animation-iteration-count: infinite;
-    -webkit-animation-direction: normal;
-    -webkit-animation-play-state: running;
+    animation-name: slide_animation;
+    animation-duration: 30s;
+    animation-iteration-count: infinite;
+    animation-direction: normal;
+    animation-play-state: running;
 }
 
 .img-container{
