--- a/Home.html
+++ b/Home.html
@@ -12,7 +12,7 @@
 <body>
     <!--NAVIGATION BAR-->
     <nav>
-        <a href="./Home.html"><img class="logo" height="50px" width="50px" style=" line-height: 10px;" src="./assets/images/logo.png"></a>
+        <a hidden href="./Home.html"><img class="logo" height="50px" width="50px" style=" line-height: 10px;" src="./assets/images/logo.png"></a>
         <a href="./Home.html"><label class="logo">EasyPiece</label></a>
         <ul>
         <li>Recipes</li>
@@ -23,13 +23,13 @@
         </nav>
     <!--ARTICLE-->
     <article>
-        <img class="logo1" height="80px" width="80px" src="./assets/images/logo.png">
-        <h1 class="logo1" style="font-size: 60px; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">&nbsp;EasyPiece</h1>
+        <center>
+        <img class="logo1" height="76px" width="500px" src="./assets/images/wordlogo.png">
+        <h1 hidden class="logo1" style="font-size: 60px; font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">&nbsp;EasyPiece</h1>
         <br><p style="text-align: center; font-size: 20px">Free, Easy, Affordable, and Delicious Recipes to make at Home!</p>
         <br><br>
         <hr>
         <br><br>
-        <center>
     <!--Image Slideshow--> 
         <div class="slider-frame">
             <div class="slide-images">
@@ -59,7 +59,7 @@
         <h1 style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size:50px;"><i>Search Recipes</i></h1>
         <input class="search" type="text" placeholder="Type in a recipe you want to find here..."></input>
         </center>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </article>
     
     <!--End-->
@@ -100,7 +100,7 @@ body{
 /*Navbar*/
 nav{
     position: absolute;
-    background: rgb(141, 0, 0);
+    background: rgb(110, 22, 40);
     height: 80px;
     width: 100%;
     box-shadow: 0 5px 4px 0 rgba(0,0,0,.2); 
@@ -153,8 +153,6 @@ nav ul li:hover{
     cursor:pointer;
 }
 img.logo1{
-    float: left;
-    margin-left: 35%;
     display: flex;
 }
 .search{
