--- a/Home.html
+++ b/Home.html
@@ -21,6 +21,12 @@
         <p style="color:white; line-height: 80px; font-size: 25px; float: right;"> <script>document.write(new Date().toDateString());</script> </p>
         </ul>
         </nav>
+    <div style="float:left; margin-top:100px; margin-left:10px; width: 300px; height: 250px; background: #428bca; color: #fff; line-height: 250px; text-align: center; ">
+        MEDIUM RECTANGLE
+    </div>
+    <div style="float:right; margin-top:100px; margin-right:10px ;width: 300px; height: 250px; background: #428bca; color: #fff; line-height: 250px; text-align: center; ">
+        MEDIUM RECTANGLE
+        </div>
     <!--ARTICLE-->
     <article>
         <center>
@@ -59,7 +65,6 @@
         </center>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </article>
-    
     <!--End-->
     <footer>
         <center>
@@ -87,12 +92,12 @@ article{
     background-color: white;
     padding-top: 100px;
     box-shadow: 0 10px 20px 0 rgba(0,0,0,.2);
-    width: 70%;
+    width: 65%;
 }
 
 body{
     background-color: lightgrey;
-    font-family: montserrat;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
 /*Navbar*/
@@ -152,7 +157,7 @@ img.logo1{
 .slider-frame{
     overflow: hidden;
     height: 600px;
-    width: 1200px;
+    width: 1100px;
     border: black;
 }
     
