--- a/Home.html
+++ b/Home.html
@@ -15,7 +15,7 @@
     <a hidden href="./Home.html"><img class="logo" height="50px" width="50px" style=" line-height: 10px;" src="./assets/images/newlogo.png"></a>
     <a href="./Home.html"><label class="logo">EasyPiece</label></a>
     <ul>
-    <li>Recipes</li>
+    <a href="#recipe">Recipes</a>
     <li>Store</li>
     <li>About</li>
     <p style="color:white; line-height: 80px; font-size: 25px; float: right;"> <script>document.write(new Date().toDateString());</script> </p>
@@ -123,13 +123,160 @@
 </div>
 </div>
 
+    <section id="recipe">
     <center>
     <br>
     <h1 style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size:50px;">Search Recipes</h1>
     <br>
     <input class="search" type="text" placeholder="Type in a recipe you want to find here..."></input>
     </center>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br>
+
+<!--Recipe Cards-->
+<div class="card-container">
+<center>
+<div class="card-collect">
+    <a style="text-decoration: none;" href="https://www.google.com"><div class="card-frame">
+    <div>
+        <img style="border-top-left-radius:10px; border-top-right-radius:10px; height:45%; width:100%" src="https://www.thespruceeats.com/thmb/52ivqqWYcY1TmIVAHrK_JvxjhRQ=/4048x2696/filters:fill(auto,1)/basic-pancakes-3058758-hero-01-5c60cd6846e0fb00017dd2b5.jpg">
+        <div class="card-contents-text">
+        <center>
+        <h1>Blueberry Pancakes</h1>
+        <p>Breakfast</p>
+        </center>
+        <li>8 Servings</li>
+        <li>20-30 min</li>
+        <li>$2.00-$6.00</li>
+        <li>1000 kcal total</li>
+        <li>125 kcal each serving</li>
+        </div>
+    </div>
+    </div></a>
+
+    <a style="text-decoration: none;" href="https://www.google.com"><div class="card-frame">
+    <div>
+        <img style="border-top-left-radius:10px; border-top-right-radius:10px; height:45%; width:100%" src="https://www.thespruceeats.com/thmb/52ivqqWYcY1TmIVAHrK_JvxjhRQ=/4048x2696/filters:fill(auto,1)/basic-pancakes-3058758-hero-01-5c60cd6846e0fb00017dd2b5.jpg">
+        <div class="card-contents-text">
+        <center>
+        <h1>Blueberry Pancakes</h1>
+        <p>Breakfast</p>
+        </center>
+        <li>8 Servings</li>
+        <li>20-30 min</li>
+        <li>$2.00-$6.00</li>
+        <li>1000 kcal total</li>
+        <li>125 kcal each serving</li>
+        </div>
+    </div>
+    </div></a>
+
+    <a style="text-decoration: none;" href="https://www.google.com"><div class="card-frame">
+    <div>
+        <img style="border-top-left-radius:10px; border-top-right-radius:10px; height:45%; width:100%" src="https://www.thespruceeats.com/thmb/52ivqqWYcY1TmIVAHrK_JvxjhRQ=/4048x2696/filters:fill(auto,1)/basic-pancakes-3058758-hero-01-5c60cd6846e0fb00017dd2b5.jpg">
+        <div class="card-contents-text">
+        <center>
+        <h1>Blueberry Pancakes</h1>
+        <p>Breakfast</p>
+        </center>
+        <li>8 Servings</li>
+        <li>20-30 min</li>
+        <li>$2.00-$6.00</li>
+        <li>1000 kcal total</li>
+        <li>125 kcal each serving</li>
+        </div>
+    </div>
+    </div></a>
+
+    <a style="text-decoration: none;" href="https://www.google.com"><div class="card-frame">
+    <div>
+        <img style="border-top-left-radius:10px; border-top-right-radius:10px; height:45%; width:100%" src="https://www.thespruceeats.com/thmb/52ivqqWYcY1TmIVAHrK_JvxjhRQ=/4048x2696/filters:fill(auto,1)/basic-pancakes-3058758-hero-01-5c60cd6846e0fb00017dd2b5.jpg">
+        <div class="card-contents-text">
+        <center>
+        <h1>Blueberry Pancakes</h1>
+        <p>Breakfast</p>
+        </center>
+        <li>8 Servings</li>
+        <li>20-30 min</li>
+        <li>$2.00-$6.00</li>
+        <li>1000 kcal total</li>
+        <li>125 kcal each serving</li>
+        </div>
+    </div>
+    </div></a>
+    
+    <a style="text-decoration: none;" href="https://www.google.com"><div class="card-frame">
+    <div>
+        <img style="border-top-left-radius:10px; border-top-right-radius:10px; height:45%; width:100%" src="https://www.thespruceeats.com/thmb/52ivqqWYcY1TmIVAHrK_JvxjhRQ=/4048x2696/filters:fill(auto,1)/basic-pancakes-3058758-hero-01-5c60cd6846e0fb00017dd2b5.jpg">
+        <div class="card-contents-text">
+        <center>
+        <h1>Blueberry Pancakes</h1>
+        <p>Breakfast</p>
+        </center>
+        <li>8 Servings</li>
+        <li>20-30 min</li>
+        <li>$2.00-$6.00</li>
+        <li>1000 kcal total</li>
+        <li>125 kcal each serving</li>
+        </div>
+    </div>
+    </div></a>
+
+    <a style="text-decoration: none;" href="https://www.google.com"><div class="card-frame">
+    <div>
+        <img style="border-top-left-radius:10px; border-top-right-radius:10px; height:45%; width:100%" src="https://www.thespruceeats.com/thmb/52ivqqWYcY1TmIVAHrK_JvxjhRQ=/4048x2696/filters:fill(auto,1)/basic-pancakes-3058758-hero-01-5c60cd6846e0fb00017dd2b5.jpg">
+        <div class="card-contents-text">
+        <center>
+        <h1>Blueberry Pancakes</h1>
+        <p>Breakfast</p>
+        </center>
+        <li>8 Servings</li>
+        <li>20-30 min</li>
+        <li>$2.00-$6.00</li>
+        <li>1000 kcal total</li>
+        <li>125 kcal each serving</li>
+        </div>
+    </div>
+    </div></a>
+
+    <a style="text-decoration: none;" href="https://www.google.com"><div class="card-frame">
+    <div>
+        <img style="border-top-left-radius:10px; border-top-right-radius:10px; height:45%; width:100%" src="https://www.thespruceeats.com/thmb/52ivqqWYcY1TmIVAHrK_JvxjhRQ=/4048x2696/filters:fill(auto,1)/basic-pancakes-3058758-hero-01-5c60cd6846e0fb00017dd2b5.jpg">
+        <div class="card-contents-text">
+        <center>
+        <h1>Blueberry Pancakes</h1>
+        <p>Breakfast</p>
+        </center>
+        <li>8 Servings</li>
+        <li>20-30 min</li>
+        <li>$2.00-$6.00</li>
+        <li>1000 kcal total</li>
+        <li>125 kcal each serving</li>
+        </div>
+    </div>
+    </div></a>
+
+    <a style="text-decoration: none;" href="https://www.google.com"><div class="card-frame">
+    <div>
+        <img style="border-top-left-radius:10px; border-top-right-radius:10px; height:45%; width:100%" src="https://www.thespruceeats.com/thmb/52ivqqWYcY1TmIVAHrK_JvxjhRQ=/4048x2696/filters:fill(auto,1)/basic-pancakes-3058758-hero-01-5c60cd6846e0fb00017dd2b5.jpg">
+        <div class="card-contents-text">
+        <center>
+        <h1>Blueberry Pancakes</h1>
+        <p>Breakfast</p>
+        </center>
+        <li>8 Servings</li>
+        <li>20-30 min</li>
+        <li>$2.00-$6.00</li>
+        <li>1000 kcal total</li>
+        <li>125 kcal each serving</li>
+        </div>
+    </div>
+    </div></a>
+</div>
+</center>
+</div>    
+
+    
+    </section>
 </article>
 
 <footer>
